--- a/src/style/home.css
+++ b/src/style/home.css
@@ -20,3 +20,135 @@
     border-radius: 10px;
     width: 70%;
 }
+
+.navbar{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
+    background-color: #222;
+    color: white;
+}
+
+.nav-left, .nav-center, .nav-right{
+    display: flex;
+    align-items: center;
+    gap: 15px;
+}
+
+.navbar a{
+    color: white;
+    text-decoration: none;
+    font-weight: 500;
+}
+
+.search-btn, .theme-btn{
+    background: none;
+    border: none;
+    cursor: pointer;
+    color: white;
+}
+
+.banner {
+    position: relative;
+    color: white;
+    margin-bottom: 40px;
+    height: 80vh; 
+    overflow: hidden;
+    border-radius: 10px;
+}
+
+.banner::before {
+    content: "";
+    position: absolute;
+    inset: 0; 
+    background-image: var(--banner-url);
+    background-size: cover;
+    background-position: center;
+    filter: blur(20px) brightness(50%);
+    z-index: 0;
+}
+
+.banner-img {
+    position: relative;
+    width: 100%;
+    height: auto; 
+    max-height: 80vh;
+    filter: brightness(70%);
+    object-fit: contain; 
+    z-index: 1; 
+}
+
+.banner-info {
+    position: absolute;
+    bottom: 20px;
+    left: 40px;
+    max-width: 500px;
+    z-index: 2; 
+}
+
+.banner-info h2{
+    font-size: 2rem;
+    margin-bottom: 10px;
+}
+
+.banner-info button{
+    background-color: #222;
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    margin-right: 10px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.banner-info button:hover{
+    background-color: snow;
+    color: #222;
+    transform: scale(1.05);
+}
+
+.movie-row {
+  margin: 20px 0;
+}
+
+.movie-row h2{
+    color: snow;
+    margin-left: 20px;
+}
+
+.movie-scroll{
+    display: flex;
+    gap: 15px;
+    overflow-x: auto;
+    padding: 10px 20px;
+    scrollbar-width: none;
+}
+
+.movie-scroll::-webkit-scrollbar {
+  display: none;
+}
+
+.movie_card_individual {
+  min-width: 140px;  
+  max-width: 160px;
+  height: 320px;     
+  background: #222;
+  border-radius: 10px;
+  overflow: hidden;
+  color: white;
+  flex-shrink: 0;
+  transition: transform 0.2s ease;
+}
+
+.movie_card_individual:hover {
+  transform: scale(1.1);
+}
+
+.movie_image {
+  width: 100%;
+  height: 240px;
+  object-fit: cover;
+  border-radius: 8px;
+}
